backend/crates/golish/tests/snapshots/ai_events_characterization__sub_agent_completed_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 283
expression: json
---
{
  "agent_id": "agent-001",
  "duration_ms": 5000,
  "parent_request_id": "parent-req-001",
  "response": "Analysis complete",
  "type": "sub_agent_completed"
}
