backend/crates/golish/tests/snapshots/ai_events_characterization__sub_agent_error_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 295
expression: json
---
{
  "agent_id": "agent-001",
  "error": "Failed to parse response",
  "parent_request_id": "parent-req-001",
  "type": "sub_agent_error"
}
