backend/crates/golish/tests/snapshots/ai_events_characterization__sub_agent_started_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 241
expression: json
---
{
  "agent_id": "agent-001",
  "agent_name": "analyzer",
  "depth": 1,
  "parent_request_id": "parent-req-001",
  "task": "Analyze the codebase structure",
  "type": "sub_agent_started"
}
