backend/crates/golish/tests/snapshots/ai_events_characterization__sub_agent_tool_request_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 255
expression: json
---
{
  "agent_id": "agent-001",
  "args": {
    "path": "/config.json"
  },
  "parent_request_id": "parent-req-001",
  "request_id": "req-sub-1",
  "tool_name": "read_file",
  "type": "sub_agent_tool_request"
}
