backend/crates/golish/tests/snapshots/ai_events_characterization__text_delta_event_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 33
expression: json
---
{
  "accumulated": "Hello world",
  "delta": "Hello",
  "type": "text_delta"
}
