backend/crates/golish/tests/snapshots/ai_events_characterization__tool_approval_request_with_stats_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 105
expression: json
---
{
  "args": {
    "content": "// code",
    "path": "/src/lib.rs"
  },
  "can_learn": true,
  "request_id": "req-approval-1",
  "risk_level": "medium",
  "source": {
    "type": "main"
  },
  "stats": {
    "always_allow": false,
    "approvals": 4,
    "denials": 1,
    "justifications": [
      "User approved",
      "Safe operation"
    ],
    "last_updated": "2023-11-14T22:13:20Z",
    "tool_name": "write_file",
    "total_requests": 5
  },
  "suggestion": "1 more approval for auto-approve",
  "tool_name": "write_file",
  "type": "tool_approval_request"
}
