backend/crates/golish/tests/snapshots/ai_events_characterization__tool_auto_approved_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 136
expression: json
---
{
  "args": {
    "path": "/readme.md"
  },
  "reason": "Always allowed by user",
  "request_id": "req-auto-1",
  "source": {
    "type": "main"
  },
  "tool_name": "read_file",
  "type": "tool_auto_approved"
}
