backend/crates/golish/tests/snapshots/ai_events_characterization__tool_denied_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 150
expression: json
---
{
  "args": {
    "command": "rm -rf /"
  },
  "reason": "Dangerous command blocked",
  "request_id": "req-denied-1",
  "source": {
    "type": "main"
  },
  "tool_name": "shell_exec",
  "type": "tool_denied"
}
