backend/crates/golish/tests/snapshots/ai_events_characterization__tool_request_sub_agent_source_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 62
expression: json
---
{
  "args": {
    "path": "/src/lib.rs"
  },
  "request_id": "req-789",
  "source": {
    "agent_id": "agent-001",
    "agent_name": "analyzer",
    "type": "sub_agent"
  },
  "tool_name": "read_file",
  "type": "tool_request"
}
